# ANS_signature_scoring

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tutorials.html
.github/workflows/: docs-deploy.yml
_sources/: api.rst.txt  index.rst.txt
_sources/source/: signaturescoring.utils.rst.txt
docs/: conf.py  index.rst  tutorials.rst
docs/source/: modules.rst  signaturescoring.rst  signaturescoring.scoring_methods.rst
docs/tutorials/: ANS_with_R.ipynb  basic_scoring.ipynb  gmm_postprocessing_and_hard_labeling.ipynb
signaturescoring/: __init__.py
signaturescoring/scoring_methods/: AGCG_tirosh_signature_scoring.py  LVCG_tirosh_signature_scoring.py  __init__.py  adjusted_neighborhood_scoring.py  adjusted_neighborhood_signature_scoring.py  compute_signature_score.py  corrected_scanpy_scoring.py  gene_signature_scoring.py  gmm_postprocessing.py  jasmine_scoring.py  neighborhood_scoring.py  seurat_ag_scoring.py  seurat_lvg_scoring.py  (+7 more)
source/: modules.html  signaturescoring.html  signaturescoring.scoring_methods.html  signaturescoring.utils.html
src_R/: adjusted_neighborhood_scoring.R
tests/: conftest.py  preprocess_data.py  test_adjusted_neighborhood_signature_scoring.py  test_ans.py  test_preprocess_data.py  test_seurat.py  test_tirosh.py  test_utils.py
tutorials/: ANS_with_R.html  basic_scoring.html  basic_scoring.ipynb  gmm_postprocessing_and_hard_labeling.html  gmm_postprocessing_and_hard_labeling.ipynb  tut_helper.py
(+17 files in other folders)
