[tool.poetry]
name = "signaturescoring"
version = "0.1.0"
description = "The repository contains implementations of multiple gene expression signature scoring methods, including the novel gene signature scoring method, Adjusted Neighborhood Scoring (ANS)."
authors = ["lciernik <lciernik@ethz.ch>"]
readme = "README.md"
packages = [{include = "signaturescoring"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
pandas = "^1.5.0"
scanpy = "^1.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
